# misc

./: .gitignore  main.c  readme.md
android_logfiles_monitor/: CMakeLists.txt  android_logfiles_monitor.py  mem-check. cpp
build-script/: build_script.py
chatgpt-test/: main.py
copipe/: CHANGELOG.md  README.md  VSCode_Extentionsの作り方.pptx  package-lock.json  package.json
copipe-exec/: CHANGELOG.md  README.md  package-lock.json  package.json
diff_tool/: a.txt  b.txt  diff_tool.py
drawid_test/: mvvm MAUI.drawio  mvvm flutter.drawio  readme.md
gemma2_rag_test/: gemma2_gdrant_rag_test.py  qdrant_quickstart_on_local.ipynb
gemma2_test/: embedding_test.py  excel_translator.py  gemma2_accessor.py  input.xlsx  rag_test.py  setup_ssh.ps1  test.md
gemma2_translation_test/: excel_translator.py  gemma2_accessor.py  input.xlsx
git_test/: hoge.txt  readme.txt
grpc_test/: client.py  readme.pptx  server.py  usage.proto  usage_pb2.py  usage_pb2_grpc.py
grpc_test2/: README.md  client.py  demo.proto  demo_pb2.py  demo_pb2_grpc.py  grpc_test2_insecure_and_secure_log.pcapng  server.py  setup.sh
grpc_test3/: CMakeLists.txt  README.md  claude_history.txt  client.cpp  demo.proto  server.cpp
grpc_test3/samples/: client_for_cancel.cpp  server_for_cancel.cpp
java-report/: JavaとJavaVMの関係図.md  Java環境構築手順.md  OOP概要.pptx  ~$OOP概要.pptx  オプジェクト思考プログラミングの基本とC言語との比較.md  デザインパターンの特徴と用途.md
jenkins_docker_test/: jenkinsfile
maho-test/: Makefile  mahozin  mahozin.c
minesweeper/: Cargo.toml
mkdocs_test/: .gitignore  .gitlab-ci.yml  README.md  about_mkdocs_contents.md  (+5 more)
(+208 files in other folders)
